kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cicd-java-maven
  name: cicd-java-maven
  namespace: cicd-java-maven
spec:
  ports:
    - name: cicd-java-maven
      port: 80
      protocol: TCP
      targetPort: 8080-tcp
  selector:
    app: cicd-java-maven
    deployment: cicd-java-maven
  type: ClusterIP
