kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: cicd-java-maven
  namespace: cicd-java-maven
spec:
  tls:
  - hosts:
    - marcel.test
    secretName: marcel-tls-secret
  rules:
    - host: marcel.test
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cicd-java-maven
                port:
                  number: 80
